testsuite/tests/rts/ghc-debug/shouldfail/all.T
test('unsafe_rts_pause', normal, compile_and_run, ['-threaded '])